--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
         "*.tcc": "c",
         "unordered_map": "c",
         "numeric": "c",
-        "ostream": "c"
+        "ostream": "c",
+        "modules.h": "c"
     },
     "json.schemas": [
         {
