Add support for ESP32 (only compile, not tested)

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,14 @@
+[platformio]
+default_envs = esp32dev
+
 [env]
-build_flags = -Wextra -I
+build_flags = -Wextra -Werror
+lib_ldf_mode = chain+
 
 [env:native]
 platform = native
-lib_ldf_mode = chain+
-build_flags = -std=gnu++11
+
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = espidf
