--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,11 @@
         "unordered_map": "c",
         "numeric": "c",
         "ostream": "c",
-        "modules.h": "c"
+        "modules.h": "c",
+        "net.h": "c",
+        "cmod-net.h": "c",
+        "message.h": "c",
+        "cmod-platform.h": "c"
     },
     "json.schemas": [
         {
