--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = esp32dev
+default_envs = native
 
 [env]
 build_flags = -Wextra -Werror
@@ -7,8 +7,10 @@ lib_ldf_mode = chain+
 
 [env:native]
 platform = native
+test_transport = custom
 
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = espidf
+test_ignore = test_native
