--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = native
+default_envs = esp-wrover-kit
 
 [env]
 build_flags = -Wextra -Werror
@@ -9,8 +9,10 @@ lib_ldf_mode = chain+
 platform = native
 test_transport = custom
 
-[env:esp32dev]
+[env:esp-wrover-kit]
 platform = espressif32
-board = esp32dev
+board = esp-wrover-kit
 framework = espidf
+monitor_speed=115200
+monitor_filters = esp32_exception_decoder
 test_ignore = test_native
