--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
             ],
             "url": "./scripts/cmod-conf.schema.json"
         }
-    ]
+    ],
+    "cSpell.language": "en,es-ES"
 }
