--- a/platformio.ini
+++ b/platformio.ini
@@ -1,17 +1,18 @@
 [platformio]
-default_envs = esp-wrover-kit
+default_envs = esp32dev
 
 [env]
 build_flags = -Wextra -Werror
 lib_ldf_mode = chain+
+build_type = debug
 
 [env:native]
 platform = native
 test_transport = custom
 
-[env:esp-wrover-kit]
+[env:esp32dev]
 platform = espressif32
-board = esp-wrover-kit
+board = esp32dev
 framework = espidf
 monitor_speed=115200
 monitor_filters = esp32_exception_decoder
